test/fixtures/errors/promise_always_throw_unhandled.snapshot
*promise_always_throw_unhandled.js:*
  throw new Error('One');
        ^

Error: One
    at *
    at new Promise (<anonymous>)
    at *
    at *
    at *
    at *
    at *
    at *
    at *

Node.js *
